# myndighetsdata

./: .gitignore  README.md  generate_matchlist.py  manual_cleaning.py  pyproject.toml  requirements.txt  run.py  smart_merge.py  utils.py
data/: agv.json  esv.json  handlingar.json  matchlist.csv  merged.json  scb.json  sfs.json  stkt.json  wd.json
sources/: agv.py  esv.py  handlingar.py  scb.py  sfs.py  statsliggaren.py  stkt.py  wikidata.py  wikidata_query.sparql
test_scripts/: active_sfs.py  check_merged.py  check_missing.py  count.py
